# tg-bot-organization

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  docker-compose-local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/llm_service/: main.py
src/tg_bot_italian/: answers.txt  main.py  polling_bot.py  questions.txt  send_buongiorno.py
src/tg_bot_italian/data/: log.jsonl
